cluster/apps/flux-system/flux-operator/base/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - flux-operator.${SECRET_DOMAIN_0}
  parentRefs:
    - name: internal
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
